en/10.0/admin/labeltype-guide.rst
=====
Label
=====

Overview
========

|Fess| categorize search results with labels.
Label configuration page manages the labels.

Management Operations
=====================

Display Configurations
----------------------

Select Crawler > Label in the left menu to display a list page of Label Configuration, as below.

|image0|

Click a label name if you want to edit it.

Create Configuration
--------------------

Click Create New button to display a form page for Label configuration.

|image1|

Configurations
--------------

Name
::::

Label name. This value is displayed on a search result page.

Value
:::::

Label value. This value is used as URL parameter.

Included Paths
::::::::::::::

Paths which matches crawling url/path are assigned to this label.

Excluded Paths
::::::::::::::

Paths which matches crawling url/path are not assigned to this label.

Role
::::

Roles to be abled to display this label.

Display Order
:::::::::::::

Display order.

Delete Configuration
--------------------

Click a label name on a list page, and click Delete button to display a confirmation dialog.
Click Delete button to delete the configuration.

.. |image0| image:: ../../../resources/images/en/10.0/admin/labeltype-1.png
.. |image1| image:: ../../../resources/images/en/10.0/admin/labeltype-2.png
